# tree-sitter-proto

./: Cargo.toml  Makefile  Package.swift  README.md  go.mod  grammar.js  package.json  pyproject.toml  setup.py
bindings/c/: tree-sitter-proto.pc.in
bindings/go/: binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_proto/: __init__.py  binding.c
bindings/rust/: lib.rs
src/: grammar.json  node-types.json  parser.c
test/corpus/: message.txt
