[package]
name = "protols-tree-sitter-proto"
description = "proto grammar for the tree-sitter parsing library"
version = "0.2.0"
keywords = ["incremental", "parsing", "proto"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/coder3101/tree-sitter-proto"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.22.6"

[build-dependencies]
cc = "1.0"
